# workshops

./: .gitignore  01-what-is-markdown.md  LaTeX.md  README.md  activity.md  markdown-workshop.md  obsidian.md  readme.md  summary.md
.obsidian/: community-plugins.json  workspace.json
assets/: git-branches.odg
cmake-workshop/: .clangd  .gitignore  CMakeLists.txt  myprogramclang  myprogramgpp  readme.md
cmake-workshop/code/: main.cpp
cmake-workshop/example1/: Makefile  main.cpp  myprogramclang  myprogramgpp
cmake-workshop/example1-hello-world/: CMakeLists.txt  Makefile
cmake-workshop/example2/: main.cpp
cmake-workshop/example2-opencv/: main.cpp
cmake-workshop/example3-compiling-with-libraries/: Makefile
cmake-workshop/example3-using-cmake/: CMakeLists.txt  main.cpp
cmake-workshop/example3-using-make/: Makefile
cmake-workshop/example4-using-cmake/: CMakeLists.txt  main.cpp
git-workshop/: readme.md
linux-workshop/: readme.md  workshop.md
markdown-workshop/: LaTeX.md  activity.md  markdown-workshop.md  obsidian.md  readme.md  summary.md
